# pycumar

./: .gitignore  LICENSE  README.MD  pyproject.toml
pycumar/: __main__.py
