[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycumar"
description = "Calculates margin of two models by CUDA."
readme = "README.MD"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3.10",
]
requires-python = "~=3.10.*"
dependencies = [
  "numpy~=1.21",
]
